--- a/박정민/assets/css/reset.css
+++ b/박정민/assets/css/reset.css
@@ -1,21 +1,63 @@
-@import url('https://websfont.github.io/websfont/websfont.css');
+@import url("https://websfont.github.io/websfont/websfont.css");
 
 @font-face {
-    font-family: 'GmarketSans';
+    font-family: "gmarket";
     font-weight: 300;
     font-style: normal;
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.eot');
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.eot?#iefix') format('embedded-opentype'),
-        url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.woff2') format('woff2'),
-        url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.woff') format('woff'),
-        url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.ttf') format("truetype");
+    src: url("https://websfont.github.io/gmarket/gmarket-Light.eot");
+    src: url("https://websfont.github.io/gmarket/gmarket-Light.eot?#iefix")
+            format("embedded-opentype"),
+        url("https://websfont.github.io/gmarket/gmarket-Light.woff2")
+            format("woff2"),
+        url("https://websfont.github.io/gmarket/gmarket-Light.woff")
+            format("woff"),
+        url("https://websfont.github.io/gmarket/gmarket-Light.ttf")
+            format("truetype");
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "gmarket";
+    font-weight: 500;
+    font-style: normal;
+    src: url("https://websfont.github.io/gmarket/gmarket-Medium.eot");
+    src: url("https://websfont.github.io/gmarket/gmarket-Medium.eot?#iefix")
+            format("embedded-opentype"),
+        url("https://websfont.github.io/gmarket/gmarket-Medium.woff2")
+            format("woff2"),
+        url("https://websfont.github.io/gmarket/gmarket-Medium.woff")
+            format("woff"),
+        url("https://websfont.github.io/gmarket/gmarket-Medium.ttf")
+            format("truetype");
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "gmarket";
+    font-weight: 700;
+    font-style: normal;
+    src: url("https://websfont.github.io/gmarket/gmarket-Bold.eot");
+    src: url("https://websfont.github.io/gmarket/gmarket-Bold.eot?#iefix")
+            format("embedded-opentype"),
+        url("https://websfont.github.io/gmarket/gmarket-Bold.woff2")
+            format("woff2"),
+        url("https://websfont.github.io/gmarket/gmarket-Bold.woff")
+            format("woff"),
+        url("https://websfont.github.io/gmarket/gmarket-Bold.ttf")
+            format("truetype");
     font-display: swap;
 }
 
 @font-face {
     font-family: "PartizenoRegular";
-    src: url("../fonts/PartizenoRegular.woff2") format("woff2"),
-        url("../fonts/PartizenoRegular.woff") format("woff");
+    src: url("../fonts/PartizenoRegular.woff2") format("woff2");
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+@font-face {
+    font-family: "Cara-Mia-Icons";
+    src: url("../fonts/Cara-Mia-Icons.woff2") format("woff2");
     font-weight: normal;
     font-style: italic;
     font-display: swap;
@@ -78,7 +120,9 @@ textarea {
     font-size: 16px;
     line-height: 1.4;
     color: #202020;
-    font-family: NexonLv1GothicLow, -apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
+    font-family: NexonLv1GothicLow, -apple-system, BlinkMacSystemFont,
+        "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo",
+        sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
