--- a/박정민/assets/css/style.css
+++ b/박정민/assets/css/style.css
@@ -1,7 +1,7 @@
 #section1 {
     width: 100%;
     height: 100vh;
-    background-color: #D7D3D0;
+    background-color: #d7d3d0;
     display: flex;
     align-items: flex-start;
     justify-content: center;
@@ -25,10 +25,9 @@
     width: 100%;
     margin-inline-start: auto;
     margin-inline-end: auto;
-    font-family: 'heirOfLight';
+    font-family: "heirOfLight";
     line-height: 1.5;
 }
-
 
 /* section2 */
 #section2 {
