--- a/오늘네일/assets/css/reset.css
+++ b/오늘네일/assets/css/reset.css
@@ -1,47 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Abel&display=swap");
-
-@font-face {
-    font-family: "IropkeBatang";
-    font-weight: normal;
-    font-style: normal;
-    src: url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot");
-    src: url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot?#iefix") format("embedded-opentype"),
-        url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff2") format("woff2"),
-        url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff") format("woff"),
-        url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.ttf") format("truetype");
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "NeoGeoTrial-Black";
-    font-weight: normal;
-    font-style: normal;
-    src: url("../fonts/NeoGeoTrial-Black.woff2") format("woff2");
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "NeoGeoTrial-Light";
-    font-weight: normal;
-    font-style: normal;
-    src: url("../fonts/NeoGeoTrial-Light.woff2") format("woff2");
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "NeoGeoTrial-Regular";
-    font-weight: normal;
-    font-style: normal;
-    src: url("../fonts/NeoGeoTrial-Regular.woff2") format("woff2");
-    font-display: swap;
-}
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Lato:wght@100;900&display=swap");
+@import url("https://websfont.github.io/websfont/websfont.css");
 
 /* border-box 초기화 */
-*,
-*:before,
-*:after {
+*, *: before, *: after {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -211,43 +172,33 @@ select {
 .mt0 {
     margin-top: 0;
 }
-
 .mt10 {
     margin-top: 10px;
 }
-
 .mt20 {
     margin-top: 20px;
 }
-
 .mt30 {
     margin-top: 30px;
 }
-
 .mt40 {
     margin-top: 40px;
 }
-
 .mt50 {
     margin-top: 50px;
 }
-
 .mt60 {
     margin-top: 60px;
 }
-
 .mt70 {
     margin-top: 70px;
 }
-
 .mt80 {
     margin-top: 80px;
 }
-
 .mt90 {
     margin-top: 90px;
 }
-
 .mt100 {
     margin-top: 100px;
 }
@@ -255,47 +206,36 @@ select {
 .pt0 {
     padding-top: 0;
 }
-
 .pt10 {
     padding-top: 10px;
 }
-
 .pt20 {
     padding-top: 20px;
 }
-
 .pt30 {
     padding-top: 30px;
 }
-
 .pt40 {
     padding-top: 40px;
 }
-
 .pt50 {
     padding-top: 50px;
 }
-
 .pt60 {
     padding-top: 60px;
 }
-
 .pt70 {
     padding-top: 70px;
 }
-
 .pt80 {
     padding-top: 80px;
 }
-
 .pt90 {
     padding-top: 90px;
 }
-
 .pt100 {
     padding-top: 100px;
 }
-
 .pt200 {
     padding-top: 200px;
 }
