--- a/남윤서/assets/css/style.css
+++ b/남윤서/assets/css/style.css
@@ -144,6 +144,59 @@
     margin-top: 20px;
 }
 
+#section3 {
+    height: 2000px;
+    background-color: #fff;
+}
+#section4 {
+    width: 100%;
+    height: 2000px;
+    background-color: #1f2635;
+}
+
+.portWrap {
+    padding-top: 10vh;
+}
+.portWrap .port {
+    width: 90vw;
+    height: 90vh;
+    background-color: #622d21;
+    margin: 0 auto;
+    border-radius: 10px;
+    text-align: center;
+    padding: 2% 5%;
+}
+.portWrap .port h3 {
+    font-family: "SwisspoTrial-CondBlackTall";
+    font-size: 8vw;
+    color: #d2988a;
+}
+.portWrap .port p {
+    font-family: "netmarble";
+    color: #bb7968;
+    margin-bottom: 5%;
+}
+
+.portWrap .port .img {
+    width: 70%;
+    height: 50vh;
+    background-color: #fff;
+    margin: 0 auto;
+    background: url(../img/webtoon.png) no-repeat;
+    background-size: 100%;
+    position: relative;
+}
+
+.portWrap .port .img::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000078;
+}
+
 /* footer */
 #footer {
     position: fixed;
