--- a/박정민/assets/css/style.css
+++ b/박정민/assets/css/style.css
@@ -46,6 +46,7 @@
     height: 200vh;
     background-color: #10376b;
     position: relative;
+    overflow: hidden;
 }
 
 #section2 .number {
@@ -57,6 +58,7 @@
     text-transform: uppercase;
     letter-spacing: 1vw;
     padding-right: 4vw;
+    color: #ececd1;
 }
 
 #section2 .number.absolute {
@@ -69,7 +71,7 @@
 
 #section2 .number .front {
     color: #f1cb61;
-    -webkit-text-stroke: 2px #fff;
+    -webkit-text-stroke: 2px #ececd1;
     -webkit-text-fill-color: transparent;
 }
 
@@ -95,6 +97,7 @@
     line-height: 0.8;
     position: relative;
     font-family: "SwisspoTrial-SemiCondMedTall";
+    color: #ececd1;
 }
 
 #section2 .bgWrap .bg h2::before {
@@ -112,7 +115,8 @@
     width: 56vw;
     display: flex;
     gap: 20px;
-    font-family: "heirOfLight";
+    font-family: "nixgonFonts";
+    color: #ececd1;
 }
 #section2 .bgWrap .bg .right .text p {
     margin-bottom: 10px;
@@ -130,6 +134,7 @@
 }
 #section2 .bgWrap .bg .right .img img {
     border: 1px solid #fff;
+    border-radius: 10px;
 }
 #section2 .bgWrap .bg .right .img > div {
     width: 50%;
@@ -140,6 +145,95 @@
 }
 
 #section3 {
-    height: 2000px;
-    background-color: #e25041;
+    height: 100vh;
+    background-color: #e0dcd8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+#section3 h3 {
+    font-size: 70vw;
+    line-height: 0.9;
+    color: #fff;
+    font-family: "SwisspoTrial-CondensedBold";
+    text-transform: uppercase;
+    letter-spacing: 1vw;
+    color: #d9d5d1;
+}
+
+#section3 .botLeft {
+    position: absolute;
+    left: 5%;
+    bottom: 5%;
+    z-index: 1000;
+    font-family: "PartizenoRegular";
+    font-size: 10vw;
+    line-height: 0.9;
+}
+#section3 .topRight {
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    width: 600px;
+}
+#section3 .topRight p {
+    margin-bottom: 10px;
+    font-family: "gyeonggiBatang";
+    font-weight: 400;
+}
+#section3 .topRight p strong {
+    font-weight: 900;
+}
+
+#section4 {
+    height: 100vh;
+    background-color: #0d59d0;
+    padding: 3% 0;
+}
+#section4 .textTitle {
+    font-family: "SwisspoTrial-CondensedBold";
+    font-size: 16vw;
+    line-height: 1;
+    color: #fff;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    font-weight: 900;
+    margin: 0 5%;
+}
+#section4 .textTitle .space {
+    text-align: center;
+    width: 8.1vw;
+    display: inline-block;
+    font-size: 10vw;
+}
+#section4 .textDesc {
+    margin: 0 5%;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    padding-top: 3%;
+}
+#section4 .textDesc .left {
+    width: 20%;
+    font-family: "PartizenoRegular";
+    font-size: 40px;
+    line-height: 1;
+}
+#section4 .textDesc .right {
+    width: 30%;
+    font-family: "gyeonggiBatang";
+    word-break: keep-all;
+}
+#section4 .textDesc .right a {
+    display: block;
+    background: #fff;
+    display: inline-block;
+    margin-top: 10px;
+    color: #000;
+    font-family: "gyeonggiBatang";
+    padding: 2px 15px;
+    border-radius: 30px;
 }
