--- a/송성민/assets/css/style2.css
+++ b/송성민/assets/css/style2.css
@@ -1,9 +1,9 @@
-/* body {
+body {
     width: 100%;
     height: 100vh;
     overflow: hidden;
     background: #111;
-} */
+}
 
 #header {
     position: fixed;
@@ -209,6 +209,12 @@
 }
 .slider__text-line {
     overflow: hidden;
+    color: #ffacac;
+    font-family: "scoreDream";
+    font-weight: 200;
+}
+.slider__text-line.fw100 {
+    font-weight: 100;
 }
 .slider__inner {
     position: absolute;
@@ -231,11 +237,13 @@
 }
 .slider-bullet__text {
     color: #fff;
-    font-size: 0.65rem;
+    font-size: 1rem;
     margin-right: 1rem;
+    font-family: "PP NeueBit";
+    color: #ffacac;
 }
 .slider-bullet__line {
-    background-color: #fff;
+    background-color: #ffacac;
     height: 1px;
     width: 1rem;
 }
@@ -273,6 +281,9 @@
     margin: 0;
     min-width: 12.5rem;
     transform-origin: top;
+}
+.slide__img img {
+    filter: grayscale();
 }
 .slide__img:first-child {
     top: -1.5rem;
